added content to tours page

--- a/about.html
+++ b/about.html
@@ -1,127 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="Description" content="All about the magical mystical land of Trollheim">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
-    <title>About Pyrlandia
-    </title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta
+      name="Description"
+      content="All about the magical mystical land of Trollheim"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <title>About Pyrlandia</title>
     <style>
-        body {
-            background-image: url(".images/pawel-czerwinski-2PN18U8CKi0-unsplash.jpg");
-        }
+      body {
+        background-image: url(".images/pawel-czerwinski-2PN18U8CKi0-unsplash.jpg");
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <a href="index.html">
-            <h1 id="logo">Visit Pyrlandia</h1>
-        </a>
-        <nav>
-            <ul id="menu">
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="about.html" class="active">About</a>
-                </li>
-                <li>
-                    <a href="tours.html">Tours</a>
-                </li>
-            </ul>
-        </nav>
+      <a href="index.html">
+        <h1 id="logo">Visit Pyrlandia</h1>
+      </a>
+      <nav>
+        <ul id="menu">
+          <li>
+            <a href="index.html">Home</a>
+          </li>
+          <li>
+            <a href="about.html" class="active">About</a>
+          </li>
+          <li>
+            <a href="tours.html">Tours</a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <section id="hero-outer">
-        <img src="images/fantasy-g39e22e176_1920.jpg" id="hero-image" alt="Photo of the Cave Region of Trollhiem">
-        <div id="cover-text">
-            <h2>Visit Pyrlandia</h2>
-            <h3>The land of myths and legends</h3>
-        </div>
+      <img
+        src="images/fantasy-g39e22e176_1920.jpg"
+        id="hero-image"
+        alt="Photo of the Cave Region of Trollhiem"
+      />
+      <div id="cover-text">
+        <h2>Visit Pyrlandia</h2>
+        <h3>The land of myths and legends</h3>
+      </div>
     </section>
     <section>
-        <h2>History</h2>
-        <p>
-            Pyrlandia should be an independent country but instead we are under the oppression of the evil kingdom of Trollheim.
-        </p>
-        <p>
-            The country derives its name from two route words: Pyr, a greek word meaning "fire". And the word "landia" simply meaning "the land of fire"!
-        </p>
-        <p>
-            Recently Pyrlandia became a major tourist destination following the realisation of many tourists who have been enlightened 
-             about the evil opressive nature of the Trollian regime. They come seeking the genuinely kind nature of the Pyrese people.
-        </p>
+      <h2>History</h2>
+      <p>
+        Pyrlandia should be an independent country but instead we are under the
+        oppression of the evil kingdom of Trollheim.
+      </p>
+      <p>
+        The country derives its name from two route words: Pyr, a greek word
+        meaning "fire". And the word "landia" simply meaning "the land of fire"!
+      </p>
+      <p>
+        Recently Pyrlandia became a major tourist destination following the
+        realisation of many tourists who have been enlightened about the evil
+        opressive nature of the Trollian regime. They come seeking the genuinely
+        kind nature of the Pyrese people.
+      </p>
     </section>
     <section>
-        <h2>Trivia</h2>
-        <ul>
-            <li>
-                <p>Pyrlandian people do not agree with the missguided Trollian notion of monarchy where one evil ruler has sole power to affect the lives of 
-                    innocent people! Rather when we gain our independence from Trollheim we will govern ourselves with our own wisdom-based oligarchical government.
-                
-                </p>
-            </li>
-            <li>
-                <p>The national anthem of Pyrlandia is "Oh Pyrlandia! Our hearts are on fire for thee!"</p>
-            </li>
-            <li>
-                <p>The population of Pyrlandia is 3.5 Million, making it the 5th largest Fantastic country in the
-                    paradigm and twice the size of our evil overlords - although the phisical country is smaller by a third.</p>
-            </li>
-            <li>
-                <p>Citizens of Pyrlandia are called Pyrese</p>
-            </li>
-            <li>
-                <p>Official language of Pyrlandia is Trollian. Although we have our own language - Pyrish, which is not allowed to be taught in schools, 
-                    but many patriotic teachers will disregard such oppressive legislation. In the tourist areas most people
-                    you come accross will know basic to intermediate
-                    English, Spanish, and/or French</p>
-            </li>
-        </ul>
+      <h2>Trivia</h2>
+      <ul>
+        <li>
+          <p>
+            Pyrlandian people do not agree with the missguided Trollian notion
+            of monarchy where one evil ruler has sole power to affect the lives
+            of innocent people! Rather when we gain our independence from
+            Trollheim we will govern ourselves with our own wisdom-based
+            oligarchical government.
+          </p>
+        </li>
+        <li>
+          <p>
+            The national anthem of Pyrlandia is "Oh Pyrlandia! Our hearts are on
+            fire for thee!"
+          </p>
+        </li>
+        <li>
+          <p>
+            The population of Pyrlandia is 3.5 Million, making it the 5th
+            largest Fantastic country in the paradigm and twice the size of our
+            evil overlords - although the phisical country is smaller by a
+            third.
+          </p>
+        </li>
+        <li>
+          <p>Citizens of Pyrlandia are called Pyrese</p>
+        </li>
+        <li>
+          <p>
+            Official language of Pyrlandia is Trollian. Although we have our own
+            language - Pyrish, which is not allowed to be taught in schools, but
+            many patriotic teachers will disregard such oppressive legislation.
+            In the tourist areas most people you come accross will know basic to
+            intermediate English, Spanish, and/or French
+          </p>
+        </li>
+      </ul>
     </section>
     <section>
-        <h2>Map</h2>
-        <img src="images/Trollheim-Map.jpg" alt="Pyrlandia Map" width="100%">
+      <h2>Map</h2>
+      <img src="images/Trollheim-Map.jpg" alt="Pyrlandia Map" width="100%" />
     </section>
     <section>
-        <h2>Contact Us!</h2>
-        <form>
-            <label for="fname">First Name</label>
-            <br>
-            <input type="text" id="fname" name="fname">
-            <br>
-            <label for="lname">Last Name</label>
-            <br>
-            <input type="text" id="lname" name="lname">
-            <br>
-            <label for="email">Email Address</label>
-            <br>
-            <input type="email" id="email" name="email">
-            <br>
-            <label for="comments">Your Query</label>
-            <br>
-            <textarea id="comments" name="comments" rows="4" cols="40"
-                placeholder="Any questions or comments? Write them here!"></textarea>
-            <br>
-            <input type="submit" id="submit" name="submit">
-            <input type="reset" id="reset" name="reset">
-        </form>
+      <h2>Contact Us!</h2>
+      <form>
+        <label for="fname">First Name</label>
+        <br />
+        <input type="text" id="fname" name="fname" />
+        <br />
+        <label for="lname">Last Name</label>
+        <br />
+        <input type="text" id="lname" name="lname" />
+        <br />
+        <label for="email">Email Address</label>
+        <br />
+        <input type="email" id="email" name="email" />
+        <br />
+        <label for="comments">Your Query</label>
+        <br />
+        <textarea
+          id="comments"
+          name="comments"
+          rows="4"
+          cols="40"
+          placeholder="Any questions or comments? Write them here!"
+        ></textarea>
+        <br />
+        <input type="submit" id="submit" name="submit" />
+        <input type="reset" id="reset" name="reset" />
+      </form>
     </section>
     <footer>
-        <ul class="social-networks">
-            <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
-            <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
-            <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"></i></a></li>
-            <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
-        </ul>
+      <ul class="social-networks">
+        <li>
+          <a href="https://www.facebook.com" target="_blank"
+            ><i class="fab fa-facebook"></i
+          ></a>
+        </li>
+        <li>
+          <a href="https://www.twitter.com" target="_blank"
+            ><i class="fab fa-twitter-square"></i
+          ></a>
+        </li>
+        <li>
+          <a href="https://www.youtube.com" target="_blank"
+            ><i class="fab fa-youtube-square"></i></a
+          >
+        </li>
+        <li>
+          <a href="https://www.instagram.com" target="_blank"
+            ><i class="fab fa-instagram"></i
+          ></a>
+        </li>
+      </ul>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</body>
-
+  </body>
 </html>
