--- a/tours.html
+++ b/tours.html
@@ -180,6 +180,7 @@
       <input type="submit" id="submit" name="submit" />
       <input type="reset" id="reset" name="reset" />
     </form>
+    <script src="form.js"></script>
     <br />
     <br />
     <footer>
