--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     </header>
     <section id="hero-outer">
       <img
-        src="images/fantasy-g39e22e176_1920.jpg"
+        src="images/night-4702174.jpg"
         id="hero-image"
-        alt="Photo of the Cave Region of Trollhiem"
+        alt="Photo of the Mountain Region of Pyrlandia"
       />
       <div id="cover-text">
         <h2>Visit Pyrlandia</h2>
