--- a/tours.html
+++ b/tours.html
@@ -45,11 +45,7 @@
       </nav>
     </header>
     <section id="hero-outer">
-      <img
-        src="images/fantasy-g39e22e176_1920.jpg"
-        id="hero-image"
-        alt="Photo of the Cave Region of Trollhiem"
-      />
+    <img src="images/night-4702174.jpg" id="hero-image" alt="Photo of the Mountain Region of Pyrlandia" />
       <div id="cover-text">
         <h2>Visit Pyrlandia</h2>
         <h3>The land of myths and legends</h3>
