tried to improve for validator functionality

--- a/tours.html
+++ b/tours.html
@@ -110,7 +110,7 @@
       <h3>All tours begin at the tourism office in the center of Phoenix.</h3>
       <p>Address: 1736 Senate St. Phoenix. 66322. Telephone: 167-995-2663</p>
     </section>
-    <form>
+    <form action="/signup" method="post" id="signup" onsubmit="submit_form()">
       <h2>
         Interested in joining one of our tours? Register your interest below.
       </h2>
