--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
     </section>
     <section>
       <h2>Contact Us!</h2>
-      <form>
+      <form action="/signup" method="post" id="signup" onsubmit="submit_form()">
         <label for="fname">First Name</label>
         <br />
         <input type="text" id="fname" name="fname" />
@@ -140,6 +140,7 @@
         <input type="submit" id="submit" name="submit" />
         <input type="reset" id="reset" name="reset" />
       </form>
+        <script src="form.js"></script>
     </section>
     <footer>
       <ul class="social-networks">
