just a few minor changes

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta
       name="Description"
-      content="All about the magical mystical land of Trollheim"
+      content="All about the magical mystical land of Pyrlandia"
     />
     <link
       rel="stylesheet"
