--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta
       name="Description"
-      content="A travel site providing crucial tourism advice for potential visitor to the Fantastical Realm of Trollheim"
+      content="A travel site providing crucial tourism advice for potential visitor to the Fantastical Realm of Pyrlandia"
     />
     <link
       rel="stylesheet"
