--- a/tours.html
+++ b/tours.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta
       name="Description"
-      content="A complete list of tours available from the tourism board of Trollheim"
+      content="A complete list of tours available from the tourism board of Pyrlandia"
     />
     <link
       rel="stylesheet"
