improved for functionality and added a reset form function

--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
     </section>
     <section>
       <h2>Contact Us!</h2>
-      <form action="/signup" method="post" id="signup" onsubmit="submit_form()">
+      <form action="/signup-demo" method="post" id="signup" onsubmit="submit_form()">
         <label for="fname">First Name</label>
         <br />
         <input type="text" id="fname" name="fname" />
