--- a/tours.html
+++ b/tours.html
@@ -110,9 +110,9 @@
       <h3>All tours begin at the tourism office in the center of Phoenix.</h3>
       <p>Address: 1736 Senate St. Phoenix. 66322. Telephone: 167-995-2663</p>
     </section>
-    <form action="/signup" method="post" id="signup" onsubmit="submit_form()">
+    <form action="/signup-demo" method="post" id="signup" onsubmit="submit_form()">
       <h2>
-        Interested in joining one of our tours? Register your interest below.
+        Interested in joining one of our tours? <br />Register your interest below.
       </h2>
       <label for="tour-drop-down">Choose your tour!</label>
       <br />
@@ -170,7 +170,9 @@
         name="comments"
         rows="4"
         cols="40"
-        placeholder="Anything else you`d like to add? Do we need to make any adjustments in order to accommodate you or your party? Just write it all in here along with any other comments or queries and we´ll get back to you as soon as possible. We always try our best to accoodate any disabilities, but sometimes things are out of our control."
+        placeholder="Anything else you'd like to add? Do we need to make any adjustments in order to accommodate you or your party? 
+        Just write it all in here along with any other comments or queries and we'll get back to you as soon as possible. 
+        We always try our best to accoodate any disabilities, but sometimes things are out of our control."
       ></textarea>
       <br />
       <input type="submit" id="submit" name="submit" />
