--- a/tours.html
+++ b/tours.html
@@ -41,6 +41,9 @@
           <li>
             <a href="tours.html" class="active">Tours</a>
           </li>
+          <li>
+            <a href="quiz.html">Quiz</a>
+          </li>
         </ul>
       </nav>
     </header>
