Improved quiz funtionality

--- a/quiz.html
+++ b/quiz.html
@@ -25,9 +25,7 @@
     </style>
 </head>
 <body>
-    <div id="quiz"></div>
-    <button id="submit">Submit Quiz</button>
-    <div id="results"></div>
+    
     <header>
         <a href="#index.html">
           <h1 id="logo">Visit Pyrlandia</h1>
@@ -49,5 +47,10 @@
           </ul>
         </nav>
       </header>
+      <h1>Show Off Your Knowledge With Our Pyrlandia Quiz</h1>
+    <div id="quiz"></div>
+    <button id="submit">Submit Quiz</button>
+    <div id="results"></div>
+    <script src="quiz.js"></script>
 </body>
 </html>
