A few changes to quiz and readme , trying to fix a bug!

--- a/quiz.html
+++ b/quiz.html
@@ -17,7 +17,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>The Magical Realm of Pyrlandia</title>
+    <title>The Magical Realm of Pyrlandia Quiz</title>
     <style>
       body {
         background-image: url("images/pawel-czerwinski-2PN18U8CKi0-unsplash.jpg");
@@ -48,6 +48,7 @@
         </nav>
       </header>
     <h1>Show Off Your Knowledge With Our Pyrlandia Quiz</h1>
+    <p>This is the ultimate test to see how well you know out magical Realm!!!</p>
     <script src="quiz.js"></script>
     <div id="quiz"></div>
     <button id="submit">Submit Quiz</button>
