--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </header>
     <section id="hero-outer">
       <img
-        src="images/night-4702174.jpg"
+        src="images/heroImage.jpg"
         id="hero-image"
         alt="Photo of the Mountain Region of Pyrlandia"
       />
