--- a/tours.html
+++ b/tours.html
@@ -48,7 +48,7 @@
       </nav>
     </header>
     <section id="hero-outer">
-    <img src="images/night-4702174.jpg" id="hero-image" alt="Photo of the Mountain Region of Pyrlandia" />
+    <img src="images/heroImage.jpg" id="hero-image" alt="Photo of the Mountain Region of Pyrlandia" />
       <div id="cover-text">
         <h2>Visit Pyrlandia</h2>
         <h3>The land of myths and legends</h3>
