fixes quiz bug and tidies up the UI

--- a/quiz.html
+++ b/quiz.html
@@ -25,9 +25,41 @@
     </style>
 </head>
 <body>
+  <header>
+      <a href="#index.html">
+        <h1 id="logo">Visit Pyrlandia</h1>
+      </a>
+      <nav>
+        <ul id="menu">
+          <li>
+            <a href="index.html">Home</a>
+          </li>
+          <li>
+            <a href="about.html">About</a>
+          </li>
+          <li>
+            <a href="tours.html">Tours</a>
+          </li>
+          <li>
+            <a href="quiz.html" class="active">Quiz</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <section id="hero-outer">
+      <img
+        src="images/heroImage.jpg"
+        id="hero-image"
+        alt="Photo of the Mountain Region of Pyrlandia"
+      />
+      <div id="cover-text">
+        <h2>Visit Pyrlandia</h2>
+        <h3>The land of myths and legends</h3>
+      </div>
+    </section>
   <div id="quiz-container">
     <div class="question" id="question1">
-      <p>1. What is the capital of Pyrlamdia?</p>
+      <p>1. What is the capital of Pyrlandia?</p>
       <div class="options">
           <label><input type="radio" name="q1" value="fallmoor"> Fallmoor</label>
           <label><input type="radio" name="q1" value="marnessa"> Marnessa</label>
@@ -39,20 +71,20 @@
     <div class="question" id="question2">
       <p>2. What is the Population of Pyrlandia?</p>
       <div class="options">
-          <label><input type="radio" name="q1" value="100000"> 100,000</label>
-          <label><input type="radio" name="q1" value="1500000"> 1.5 Million</label>
-          <label><input type="radio" name="q1" value="10000000"> 10 Million</label>
-          <label><input type="radio" name="q1" value="3500000"> 3.5 Million</label>
+          <label><input type="radio" name="q2" value="100000"> 100,000</label>
+          <label><input type="radio" name="q2" value="1500000"> 1.5 Million</label>
+          <label><input type="radio" name="q2" value="10000000"> 10 Million</label>
+          <label><input type="radio" name="q2" value="3500000"> 3.5 Million</label>
       </div>
     </div>
 
     <div class="question" id="question3">
       <p>3. What does the word Pyrlandia mean?</p>
       <div class="options">
-          <label><input type="radio" name="q1" value="ice"> Land of Ice</label>
-          <label><input type="radio" name="q1" value="peace"> Land of Peace</label>
-          <label><input type="radio" name="q1" value="fire"> Land of Fire</label>
-          <label><input type="radio" name="q1" value="plenty"> Land of Plenty</label>
+          <label><input type="radio" name="q3" value="ice"> Land of Ice</label>
+          <label><input type="radio" name="q3" value="peace"> Land of Peace</label>
+          <label><input type="radio" name="q3" value="fire"> Land of Fire</label>
+          <label><input type="radio" name="q3" value="plenty"> Land of Plenty</label>
       </div>
     </div>
 
