added more photos to the site

--- a/about.html
+++ b/about.html
@@ -113,7 +113,7 @@
     </section>
     <section>
       <h2>Map</h2>
-      <img src="images/Trollheim-Map.jpg" alt="Pyrlandia Map" width="100%" />
+      <img src="images/pyrlandiaMap.jpg" alt="Pyrlandia Map" width="100%" />
     </section>
     <section>
       <h2>Contact Us!</h2>
