--- a/index.html
+++ b/index.html
@@ -63,26 +63,29 @@
       <div class="row">
         <div class="column">
           <img
-            src="images/fantasy-g39e22e176_1920.jpg"
-            alt="fantasy img"
-            style="width: 100%"
+            src="images/phoenixCity.jpg"
+            alt="Phoenix City img"
+            style="width: 100%"  
           />
+          <!--Image by Mollyroselee from Pixabay-->
           <a href="tours.html">Visit the magnificent capital city of Phoenix</a>
         </div>
         <div class="column">
           <img
-            src="images/fantasy-gb3cff6b6a_1920.jpg"
-            alt="fantasy img"
-            style="width: 100%"
+            src="images/angorreCity.jpg"
+            alt="Angorre City img"
+            style="width: 100%"  
           />
+          <!--Image by Enrique Meseguer from Pixabay-->
           <a href="tours.html">Visit the historic city of Angorre</a>
         </div>
         <div class="column">
           <img
-            src="images/mystery-ge0a996796_1920.jpg"
+            src="images/fallmoorCity.png"
             alt="fantasy img"
             style="width: 100%"
           />
+          <!--Image by Gianluca from Pixabay-->
           <a href="tours.html">Visit trendy Falmoor</a>
         </div>
       </div>
