--- a/quiz.html
+++ b/quiz.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <header>
-      <a href="#index.html">
+      <a href="index.html">
         <h1 id="logo">Visit Pyrlandia</h1>
       </a>
       <nav>
