minor gramatic editing

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <figcaption>
         <blockquote>
           <p>
-            Why would't you come to Pyrlandia? The food great, the people are
+            Why wouldn't you come to Pyrlandia? The food is great, the people are
             kind. What's not to like?!
           </p>
         </blockquote>
@@ -142,7 +142,7 @@
         </li>
         <li>
           <a href="https://www.youtube.com" target="_blank"
-            ><i class="fab fa-youtube-square"></i></a
+            ><i class="fab fa-youtube-square"></i></a
           >
         </li>
         <li>
