fixes a couple issues in README and quiz.html

--- a/quiz.html
+++ b/quiz.html
@@ -57,6 +57,7 @@
         <h3>The land of myths and legends</h3>
       </div>
     </section>
+    <h1>Test out Your Knowledge of Pyrlandia with our Cool New Quiz!!!</h1>
   <div id="quiz-container">
     <div class="question" id="question1">
       <p>1. What is the capital of Pyrlandia?</p>
