Final additions to README file

--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta
       name="Description"
       content="A travel site providing crucial tourism advice for potential visitor to the Fantastical Realm of Pyrlandia"
-    />
+    >
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css"
-    />
+    >
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    />
+    >
     <link rel="stylesheet" href="style.css" />
     <title>The Magical Realm of Pyrlandia</title>
     <style>
@@ -52,7 +52,7 @@
         src="images/heroImage.jpg"
         id="hero-image"
         alt="Photo of the Mountain Region of Pyrlandia"
-      />
+      >
       <div id="cover-text">
         <h2>Visit Pyrlandia</h2>
         <h3>The land of myths and legends</h3>
@@ -66,7 +66,7 @@
             src="images/phoenixCity.jpg"
             alt="Phoenix City img"
             style="width: 100%"  
-          />
+          >
           <!--Image by Mollyroselee from Pixabay-->
           <a href="tours.html">Visit the magnificent capital city of Phoenix</a>
         </div>
@@ -75,7 +75,7 @@
             src="images/angorreCity.jpg"
             alt="Angorre City img"
             style="width: 100%"  
-          />
+          >
           <!--Image by Enrique Meseguer from Pixabay-->
           <a href="tours.html">Visit the historic city of Angorre</a>
         </div>
@@ -84,7 +84,7 @@
             src="images/fallmoorCity.png"
             alt="fantasy img"
             style="width: 100%"
-          />
+          >
           <!--Image by Gianluca from Pixabay-->
           <a href="tours.html">Visit trendy Falmoor</a>
         </div>
